Optimize IDs